Media folder for church web

--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,8 @@
                     {#                        <li id="menu-item-1717" class="menu-item menu-item-type-custom menu-item-object-custom nav-item menu-item-1717"><a title="Post Right Sidebar" href="/genesis/make-a-joyful-shout-to-god/?blog-single-layout=right">Post Right Sidebar</a></li>#}
                     {#                    </ul>#}
                 </li>
-                <li id="menu-item-1701" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children nav-item menu-item-1701 dropdown"><a title="Sermons" href="#">Sermons</a>
+                <li id="menu-item-1701" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children nav-item menu-item-1701 dropdown">
+                    <a title="Sermons" href="#">Sermons</a>
                     {#                    <ul role="menu" class=" dvt-nav-dropdown closed">#}
                     {#                        <li id="menu-item-1708" class="menu-item menu-item-type-custom menu-item-object-custom nav-item menu-item-1708"><a title="Sermons List" href="http://divinity.oxygenna.com/genesis/sermons/">Sermons List</a></li>#}
                     {#                        <li id="menu-item-2033" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2033"><a title="Sermons List Alt" href="http://divinity.oxygenna.com/genesis/sermons-list-alt/">Sermons List Alt</a></li>#}
