--- a/templates/challenges/add.html
+++ b/templates/challenges/add.html
@@ -1,15 +1,115 @@
-{% extends "forms.html" %}
+{% load static %}
+<html>
 
-{% block extraheading %}
-    <script>
-        $("#challenges").addClass("active");
-        $("#id_name").focus();
-    </script>
-{% endblock %}
+<head>
 
-{% block form-title %}{{ title }}{% endblock %}
-{% block form-action %}{% url 'challenges' %}{% endblock %}
-{% block form-extra %}
-    <input type='hidden' name='action' value='add'/>
-{% endblock %}
-{% block form-back %}{% url 'challenges' %}{% endblock %}
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"/>
+    <link href='//fonts.googleapis.com/css?family=Lato:400,700&subset=latin,cyrillic,cyrillic-ext,vietnamese,latin-ext' rel='stylesheet' type='text/css'>
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" />
+
+    <script src="{% static 'js/jquery-2.1.3.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+</head>
+
+<body background="{% static 'images/sky.jpg' %}">
+
+<div class="container-fluid" style="margin: 2em">
+    <div class="row">
+        <div class='col-sm-12'>
+
+            <div class="col-sm-3"></div>
+
+            <div class="col-sm-6">
+                <div class="well" style="margin-bottom: 3px; padding: 10px; color: #fff; background-color: #043b8a">
+                    <h4>{{ title }}</h4>
+                </div>
+                <form id="formulario" class='well' enctype="multipart/form-data" autocomplete="off">
+                    <input type='hidden' name='action' value='add_question'/>
+                    <input type='hidden' name='id' value='{{ challenge.id }}'/>
+
+
+
+
+                    <p style="text-align: right;">
+                        <a class="btn btn-success btn-form" id="formbutton">
+                            <i class="fa fa-check"></i> Save
+                        </a>
+                        <a href="{% url 'challenges' %}" class="btn btn-info" style="margin-left: 0.5em">
+                            <i class="fa fa-arrow-left"></i> Cancel
+                        </a>
+                    </p>
+                </form>
+            </div>
+
+            <div class="col-sm-3"></div>
+
+        </div>
+    </div>
+</div>
+
+
+
+<script>
+
+    $(function() {
+
+        sweetAlertSuccessRedirect = function (url, msg) {
+            swal({
+                title: 'Great!!!',
+                type: "success",
+                text: msg,
+                confirmButtonClass: "btn-success",
+                confirmButtonText: "OK",
+                closeOnConfirm: false
+            }, function(isConfirm){
+                if (isConfirm) {
+                    location.href = url;
+                }
+            });
+        };
+
+        sweetAlertErrorRedirect = function (msg) {
+            swal({
+                title: 'Oops!!!',
+                type: "error",
+                text: msg,
+                confirmButtonClass: "btn-danger",
+                confirmButtonText: "OK",
+                closeOnConfirm: false
+            });
+        };
+
+        $("#formbutton").click(function(){
+            var formdata = new FormData($("#formulario")[0]);
+            $.ajax({
+                type: "POST",
+                url: "{% url 'challenges' %}",
+                data: formdata,
+                success: function(data) {
+                    if (data.result === 'ok') {
+                        sweetAlertSuccessRedirect(data.redirect_url, data.msg);
+                    } else {
+                        sweetAlertErrorRedirect(data.msg);
+                    }
+                },
+                error: function() {
+                    sweetAlertErrorRedirect("Server Error");
+                },
+                dataType: "json",
+                cache: false,
+                contentType: false,
+                processData: false
+            });
+        });
+
+    });
+
+    {% block extraheading %}
+    {% endblock %}
+
+</script>
+
+</body>
+
+</html>
