--- a/templates/challenges/access.html
+++ b/templates/challenges/access.html
@@ -17,6 +17,23 @@
             font-size: 2em;
             border: 1px solid #000;
         }
+
+        ::-webkit-input-placeholder {
+            opacity: 0.05 !important; /* for older chrome versions. may no longer apply. */
+        }
+
+        :-moz-placeholder { /* Firefox 18- */
+            opacity: 0.05 !important;
+        }
+
+        ::-moz-placeholder {  /* Firefox 19+ */
+            opacity: 0.05 !important;
+        }
+
+        :-ms-input-placeholder {
+            opacity: 0.05 !important;
+        }
+
     </style>
 </head>
 
